<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/sound"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/good"
            android:title="@string/search_text" />
        <item
            android:id="@+id/nav_all_categories"
            android:icon="@drawable/disc"
            android:title="@string/all_categories" />
        <item
            android:id="@+id/nav_add_missing_place"
            android:icon="@drawable/phone"
            android:title="@string/add_missing_place" />
    </group>
<item android:title="@string/profile">
<menu>
<group android:checkableBehavior="single">

    <item
        android:id="@+id/nav_login"
        android:icon="@drawable/sound"
        android:title="@string/login" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/good"
        android:title="@string/profile" />
    <item
        android:id="@+id/nav_all_logout"
        android:icon="@drawable/disc"
        android:title="@string/logout" />





</group>

</menu>


</item>


    <item android:title="@string/share">
        <menu>
            <group android:checkableBehavior="none">

                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/sound"
                    android:title="@string/share" />
                <item
                    android:id="@+id/nav_rate_us"
                    android:icon="@drawable/good"
                    android:title="@string/rate_us" />






            </group>

        </menu>


    </item>
</menu>