<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"

    android:id="@+id/drawer_layout"
  >
<com.google.android.material.navigation.NavigationView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    android:layout_gravity="start"
    app:headerLayout="@layout/menu_header"
    app:menu="@menu/main_menu"
    android:id="@+id/navigation_view"
    android:theme="@style/NavigationTheme"
    ></com.google.android.material.navigation.NavigationView>



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
android:id="@+id/content"
    android:background="@color/home_background"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
android:padding="20dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/menu_icon"
            android:layout_centerVertical="true"
            android:src="@android:drawable/ic_menu_sort_by_size" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/banner_background"
            android:padding="5dp"
            android:src="@android:drawable/ic_menu_add" />

    </RelativeLayout>

    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                >
                <TextView
                    android:id="@+id/name_app"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="24sp"
                    android:fontFamily="casual"
                    android:layout_centerHorizontal="true"


                    />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/name_app"
                    android:background="@color/white"
                    android:layout_marginRight="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:elevation="8dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search_text"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"

                        />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:src="@android:drawable/ic_menu_search"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        />
                </RelativeLayout>


            </RelativeLayout>




            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"

                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@color/card1"
                        android:elevation="8dp"
                        android:layout_margin="10dp"
                        >

                        <ImageView
                            android:layout_width="300dp"
                            android:layout_height="300dp"
                            android:src="@drawable/phone"
                            android:layout_centerInParent="true"


                            />


                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/restaurants"
                        android:textAlignment="center"
                        android:gravity="center_horizontal" />


                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@color/card2"
                        android:elevation="8dp"
                        android:layout_margin="10dp"
                        >

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="300dp"
                            android:src="@drawable/disc"
                            android:layout_centerInParent="true"


                            />


                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/restaurants"
                        android:textAlignment="center"
                        android:gravity="center_horizontal" />


                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@color/card3"
                        android:elevation="8dp"
                        android:layout_margin="10dp"
                        >

                        <ImageView
                            android:layout_width="300dp"
                            android:layout_height="300dp"
                            android:src="@drawable/sound"
                            android:layout_centerInParent="true"


                            />


                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/airports"
                        android:textAlignment="center"
                        android:gravity="center_horizontal" />


                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@color/card4"
                        android:elevation="8dp"
                        android:layout_margin="10dp"
                        >

                        <ImageView
                            android:layout_width="300dp"
                            android:layout_height="300dp"
                            android:src="@drawable/good"
                            android:layout_centerInParent="true"


                            />


                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/shops"
                        android:textAlignment="center"
                        android:gravity="center_horizontal" />


                </LinearLayout>




            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:background="@color/banner_background_light"
                >
                <LinearLayout
                    android:id="@+id/featured_background"
                    android:layout_width="170dp"
                    android:layout_height="280dp"
                    android:background="@color/banner_background"
                    android:layout_margin="20dp"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/featured_locations"
                        android:textSize="25dp"
                        android:layout_margin="10dp"
                        android:textColor="@color/colorAccent"
                        android:textAllCaps="true"
                        android:paddingTop="50dp"
                        android:layout_marginLeft="10dp"
                        ></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"

                        android:text="@string/featured_locations_description"
                        ></TextView>

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/featured_recycle"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_toRightOf="@id/featured_background"
                    android:background="@color/home_background">


                </androidx.recyclerview.widget.RecyclerView>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:padding="20dp"
                android:elevation="8dp"

                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/most_viewed_location"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp"

                        app:fontFamily="@font/aclonica"
                        android:textAllCaps="true">

                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_view"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        />



                </RelativeLayout>



                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_gravity="center"
                    android:id="@+id/most_viewed_recycle"

                    >


                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:padding="20dp"

                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/categories"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp"

                        app:fontFamily="@font/aclonica"
                        android:textAllCaps="true">

                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_view"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        />



                </RelativeLayout>



                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:id="@+id/category_recycle"
                    android:layout_gravity="center"
                    >


                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>